# hirzenbach-bot

./: .gitignore  README.md  license.txt  pyproject.toml  readme.md
hirzenbach-bot/: commands.py  env.py  gpt3.py  main.py  migrate.py  persistance.py  persistence.py  scheduled.py  vulgar_fraction.py
